# try_git

./: CMakeLists.txt  WebService  main.cc  test
src/: CMakeLists.txt  main.cc  websocket_manager.cc  websocket_manager.h
src/connectionManager/: connection_manager.cc  connection_manager.h  websocket.cc  websocket.h
src/serviceManager/: service_manager.cc  service_manager.h
src/tokenManager/: token_manager.cc  token_manager.h
src/websocketServer/: websocket_server.cc  websocket_server.h
